Fix content clipping in tables

--- a/dienstplan/css/style.css
+++ b/dienstplan/css/style.css
@@ -82,7 +82,7 @@ input[type=submit], .greyButton:link, .greyButton:visited {
 	background-color: white;
 	border-radius: 12px;
 
-    min-width: 850px;
+    min-width: 930px;
 	max-width: 1000px;
 
 	top: 20px;
